--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "start": "vite"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.95.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@tanstack/router-plugin": "^1.95.6",
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^6.0.3"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.95.6",
     "@tanstack/router-devtools": "^1.95.6",
+    "graphql-form": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
