--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-router": "^1.95.6",
     "@tanstack/router-devtools": "^1.95.6",
     "graphql-form": "^0.4.3",
+    "graphql-js-tree": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
